# vbkg-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  debug_celery.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api/: api.py  deps.py
app/api/endpoints/: auth.py  conflicts.py  datasources.py  domain.py  fibo.py  file_upload.py  knowledge.py  knowledge_graph.py  notifications.py  pipeline_steps.py  pipelines.py  quality_management.py  search.py  users.py  validation_rules.py  visualization.py  worker.py
app/core/: config.py  logger.py  security.py  supabase.py
app/nlp/: embeddings.py  entity_extraction.py  relation_extraction.py  text_chunking.py
app/schemas/: api.py  auth.py  conflict_resolution.py  datasource.py  domain.py  entity.py  fibo.py  file_upload.py  knowledge.py  knowledge_graph.py  notification.py  pipeline.py  pipeline_step.py  quality.py  relationship.py  search.py  user.py  visualization.py  worker.py
app/services/: auth.py  conflict_detection.py  conflict_resolution.py  data_extraction.py  datasource.py  domain.py  entity_resolution.py  fibo.py  file_upload.py  knowledge_graph.py  knowledge_graph_editor.py  notification.py  pipeline.py  pipeline_step.py  quality_management.py  search.py  user.py  visualization.py  worker.py
app/tasks/: extraction.py  ingestion.py  transformation.py  worker.py
app/utils/: debug_celery.py  file_handler.py  neo4j.py  rate_limiter.py  s3.py  similarity.py  stats_manager.py  supabase_utils.py  validators.py
data/ontology/: banking_ontology.owl
frontend/: .dockerignore  .gitignore  Dockerfile  biome.json  nginx.conf  package.json
frontend/apps/console/: bun.lockb  package.json  tsconfig.app.json
frontend/apps/console/scripts/: install-components.sh
frontend/apps/console/src/: App.tsx  index.css  router.tsx
frontend/apps/console/src/components/: AISuggestionCard.tsx  Logo.tsx  SeverityBadge.tsx  StatusBadge.tsx  index.tsx
frontend/apps/console/src/hooks/: permission.ts
frontend/apps/console/src/layouts/: AdminLayout.tsx  ExpertLayout.tsx  UserLayout.tsx
frontend/apps/console/src/pages/: Error.tsx  NotFound.tsx
frontend/apps/console/src/utils/: formatBytes.ts  getFileIcon.tsx
scripts/: start_celery.sh
supabase/: config.toml  seed.sql
supabase/migrations/: 20250417060509_init_db.sql  20250511080908_pipeline_step_run_table.sql  20250517020952_create_datasource_encrypt_function.sql  20250521133229_user_system.sql  20250525020026_validation_rules.sql  20250525060530_new_fibo.sql  20250525115052_edit_get_domain_entity_type_function.sql  20250525115841_edit_get_domain_entity_type_function_2.sql  20250525120032_edit_get_domain_entity_type_function_3.sql  20250526082947_rate_limit_log.sql  20250601043348_exec_sql_function.sql  20250601043521_exec_sql_function.sql  20250601043839_exec_sql_function.sql  20250601044014_exec_sql_function.sql
tmp/: 3be8cdf9-a68a-48d4-81d1-02ce37a934a9
(+110 files in other folders)
